[package]
name = "lorawan-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.0", optional = true }
embedded-hal = "0.2.6"
lorawan-encoding = { git = "https://github.com/ivajloip/rust-lorawan.git", rev = "2c6f155", default-features = false, features = ["default-crypto"] }
radio = { git = "https://github.com/Tortoaster/radio-hal.git", branch = "modulation-types" }
rand_core = "0.6.0"

[features]
defmt-default = ["defmt", "lorawan-encoding/defmt-default"]
defmt-trace = ["defmt", "lorawan-encoding/defmt-trace"]
defmt-debug = ["defmt", "lorawan-encoding/defmt-debug"]
defmt-info = ["defmt", "lorawan-encoding/defmt-info"]
defmt-warn = ["defmt", "lorawan-encoding/defmt-warn"]
defmt-error = ["defmt", "lorawan-encoding/defmt-error"]
