[package]
name = "lorawan-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
cmac = "0.6.0"
defmt = { version = "0.3.0", optional = true }
embedded-hal = "0.2.6"
num-derive = "0.2"
num-traits = { version = "0.2", default-features = false }
radio = { git = "https://github.com/Tortoaster/radio-hal.git", branch = "modulation-types" }
rand_core = "0.6.0"
